--- a/Week-02/Exercise.ipynb
+++ b/Week-02/Exercise.ipynb
@@ -12,13 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n",
+      "['a', 'b', 'c']\n",
+      "['b', 'c', 'd']\n",
+      "['c', 'd', 'e']\n",
+      "['d', 'e', 'f']\n",
+      "['e', 'f', 'g']\n",
+      "['f', 'g', 'h']\n",
+      "['g', 'h', 'i']\n",
+      "['h', 'i', 'j']\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve Alphabet slices here. \n",
     "## Extra Credit:  Do this without 'hard coding' the alpahbet.\n",
+    "alphabet = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "print(alphabet[0:3])\n",
     "\n",
+    "for i in range(8):\n",
+    "  print(alphabet[i:i+3])\n",
     "\n"
    ]
   },
@@ -32,12 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lil Wayne', 'Nicki Minaj', 'Drake']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solve rapper names here\n",
-    "rappers = ['lil wayne', 'nicki minaj', 'drake']\n"
+    "rappers = ['lil wayne', 'nicki minaj', 'drake']\n",
+    "new_names = []\n",
+    "\n",
+    "for rapper in rappers:\n",
+    "  new_names.append(rapper.title())\n",
+    "\n",
+    "new_names"
    ]
   },
   {
@@ -51,11 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solve problem here\n"
+    "# Solve problem here\n",
+    "def isEven(x):\n",
+    "  return x%2 == 0\n",
+    "\n",
+    "isEven(3)"
    ]
   },
   {
@@ -69,15 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-6a4c39b495a9>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-6a4c39b495a9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    list_sum = ???\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "353 35.3\n"
      ]
     }
    ],
@@ -85,12 +136,12 @@
     "# Solve problem here:\n",
     "\n",
     "my_list = [1, 5, 10, 55, 88, 44, 42, 50, 20, 38]\n",
-    "list_sum = ???\n",
-    "list_avg = ???\n",
+    "list_sum = sum(my_list)\n",
+    "list_avg = list_sum/len(my_list)\n",
     "\n",
     "\n",
     "# Keep this as your last line in this cell.\n",
-    "print(list_sum, list_average)"
+    "print(list_sum, list_avg)"
    ]
   },
   {
@@ -109,13 +160,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Michele', 'Robin', 'Sara'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solve problem here:\n",
     "\n",
-    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n"
+    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n",
+    "\n",
+    "def removeDuplicates(input_list):\n",
+    "  return set(input_list)\n",
+    "\n",
+    "removeDuplicates(names)\n"
    ]
   },
   {
@@ -134,12 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solve problem here:\n",
-    "input_list = [5, 10, 99, 20, 25]"
+    "input_list = [5, 10, 99, 20, 25]\n",
+    "another_list = []\n",
+    "\n",
+    "def firstAndLast(input_list):\n",
+    "  if not input_list:\n",
+    "    return\n",
+    "  return [input_list[0], input_list[-1]]\n",
+    "\n",
+    "firstAndLast(another_list)"
    ]
   },
   {
@@ -159,16 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-10-ca9e2b626fbd>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-ca9e2b626fbd>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -176,14 +253,32 @@
     "\n",
     "def your_function(a, b, c):\n",
     "    # Fill in your code below and return max value of a, b, c\n",
+    "    if a > b and a > c:\n",
+    "        return a\n",
+    "    elif b > a and b > c:\n",
+    "        return b\n",
+    "    return c\n",
+    "\n",
+    "your_function(1,3,3)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test to see if your function works properly.\n",
     "your_function(1, 5, 10)"
@@ -202,11 +297,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'buzz'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solve Problem fizzbuzz here:\n"
+    "# Solve Problem fizzbuzz here:\n",
+    "def fizzBuzz(n):\n",
+    "  result = ''\n",
+    "  if n%3 == 0:\n",
+    "    result += 'fizz'\n",
+    "  if n%5 == 0:\n",
+    "    result += 'buzz'\n",
+    "  if not result:\n",
+    "    return None\n",
+    "  return result\n",
+    "\n",
+    "fizzBuzz(3)"
    ]
   }
  ],
@@ -226,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
