--- a/Week-03/Exercise.ipynb
+++ b/Week-03/Exercise.ipynb
@@ -20,10 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-08-07 19:54:39.651177\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "print(datetime.datetime.now())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,10 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.274333882308138"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def getArea(radius):\n",
+    "  return math.pi * (radius**2)\n",
+    "\n",
+    "getArea(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def noDuplicates(arr):\n",
+    "  set_of_arr = set(arr)\n",
+    "  return len(set_of_arr) == len(arr)\n",
+    "\n",
+    "input_list = [1,2,3,4,5]\n",
+    "noDuplicates(input_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,11 +121,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 74, 'W': 63, 'A': 211, 'Y': 44, 'N': 165, 'E': 274, ' ': 522, 'M': 77, 'I': 185, 'C': 60, 'H': 122, 'L': 126, 'R': 152, 'T': 180, 'J': 8, '.': 26, '(': 12, 'B': 59, 'O': 145, 'S': 152, 'P': 39, '2': 24, '7': 7, ',': 37, '1': 28, '9': 16, '8': 6, ')': 12, '[': 14, ']': 14, 'K': 13, 'F': 44, 'G': 53, 'X': 5, 'U': 66, 'V': 20, '3': 2, '4': 4, '5': 5, '6': 3, '0': 36, '\\n': 6, '-': 6, ';': 1, '!': 1, '—': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "fp = 'data/lil-wayne.txt'\n",
+    "fh = open(fp)\n",
+    "data = fh.read()\n",
+    "\n",
+    "my_dict = {}\n",
+    "\n",
+    "for word in data: \n",
+    "  if not word.upper() in my_dict:\n",
+    "    my_dict[word.upper()] = 1\n",
+    "  else:\n",
+    "    my_dict[word.upper()] += 1\n",
+    "\n",
+    "print(my_dict)\n"
    ]
   },
   {
@@ -89,10 +158,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(' ', 522),\n",
+       " ('E', 274),\n",
+       " ('A', 211),\n",
+       " ('I', 185),\n",
+       " ('T', 180),\n",
+       " ('N', 165),\n",
+       " ('R', 152),\n",
+       " ('S', 152),\n",
+       " ('O', 145),\n",
+       " ('L', 126),\n",
+       " ('H', 122),\n",
+       " ('M', 77),\n",
+       " ('D', 74),\n",
+       " ('U', 66),\n",
+       " ('W', 63),\n",
+       " ('C', 60),\n",
+       " ('B', 59),\n",
+       " ('G', 53),\n",
+       " ('Y', 44),\n",
+       " ('F', 44),\n",
+       " ('P', 39),\n",
+       " (',', 37),\n",
+       " ('0', 36),\n",
+       " ('1', 28),\n",
+       " ('.', 26),\n",
+       " ('2', 24),\n",
+       " ('V', 20),\n",
+       " ('9', 16),\n",
+       " ('[', 14),\n",
+       " (']', 14),\n",
+       " ('K', 13),\n",
+       " ('(', 12),\n",
+       " (')', 12),\n",
+       " ('J', 8),\n",
+       " ('7', 7),\n",
+       " ('8', 6),\n",
+       " ('\\n', 6),\n",
+       " ('-', 6),\n",
+       " ('X', 5),\n",
+       " ('5', 5),\n",
+       " ('4', 4),\n",
+       " ('6', 3),\n",
+       " ('3', 2),\n",
+       " (';', 1),\n",
+       " ('!', 1),\n",
+       " ('—', 1)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_dict =  sorted(my_dict.items(), key = lambda x:x[1], reverse=True)\n",
+    "sorted_dict"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,11 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 5, 8, 13, 21, 63]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list1 = [1, 1, 2, 3, 5, 8, 13, 21]"
+    "list1 = [1, 1, 2, 3, 5, 8, 13, 21]\n",
+    "fourth = list1.pop(3)\n",
+    "list1.append(list1[-1]*fourth)\n",
+    "\n",
+    "list1"
    ]
   },
   {
@@ -131,11 +274,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 15, 21]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]"
+    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]\n",
+    "new_list = []\n",
+    "\n",
+    "for num in original_list:\n",
+    "  if num%3 == 0:\n",
+    "    new_list.append(num)\n",
+    "\n",
+    "new_list"
    ]
   },
   {
@@ -147,11 +308,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[21, 19, 15, 9, 8, 6, 3, 2]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]"
+    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]\n",
+    "original_list.reverse()\n",
+    "\n",
+    "original_list"
    ]
   },
   {
@@ -165,11 +340,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "original_list = [1, 2, 3, 4, 5, 6, 7]\n"
+    "original_list = [1, 2, 3, 4, 5, 6, 7]\n",
+    "new_list = []\n",
+    "\n",
+    "for num in original_list:\n",
+    "  new_list.append(num**2)\n",
+    "\n",
+    "new_list\n"
    ]
   },
   {
@@ -194,12 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 400\n",
+      "20 300\n",
+      "30 200\n",
+      "40 100\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [10, 20, 30, 40]\n",
-    "list2 = [100, 200, 300, 400]"
+    "list2 = [100, 200, 300, 400]\n",
+    "\n",
+    "for i in range(len(list1)):\n",
+    "  print(list1[i], list2[-1-i])"
    ]
   },
   {
@@ -214,11 +420,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I', 'love', 'data', 'science', '!']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list_of_strings = ['I', 'love', '', '', 'data', '', 'science', '!']\n"
+    "list_of_strings = ['I', 'love', '', '', 'data', '', 'science', '!']\n",
+    "\n",
+    "i = 0\n",
+    "while(i < len(list_of_strings)):\n",
+    "  if list_of_strings[i] == '':\n",
+    "    list_of_strings.pop(i)\n",
+    "  else:\n",
+    "    i+=1\n",
+    "\n",
+    "list_of_strings\n"
    ]
   },
   {
@@ -234,11 +460,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_dict = {'a': 100, 'b': 999, 'c': 300}\n"
+    "sample_dict = {'a': 100, 'b': 999, 'c': 300}\n",
+    "\n",
+    "if 999 in sample_dict.values():\n",
+    "  print(True)\n",
+    "else:\n",
+    "  print(False)\n"
    ]
   },
   {
@@ -258,24 +497,32 @@
     "greeting = \"Hello, possible pirate! What's the password?\"\n",
     "password = 'admin'\n",
     "message = greeting+password\n",
-    "if message in [\"Arrr!\"):\n",
+    "if message in \"Arrr!\":\n",
     "\tprint(\"Go away, pirate.\")\n",
-    "elif\n",
-    "print(\"Greetings, hater of pirates!\")"
+    "else:\n",
+    "  print(\"Greetings, hater of pirates!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11425.0\n"
+     ]
+    }
+   ],
    "source": [
     "pages = 457\n",
-    "word_per_page == 250\n",
-    "number-of-pieces = 100\n",
+    "word_per_page = 250\n",
+    "number_of_pieces = 100\n",
     "\n",
-    "each_chunk = [457 * 250]/10\n",
-    "print \"each_chunk\""
+    "each_chunk = (pages*word_per_page)/10\n",
+    "print (each_chunk)"
    ]
   },
   {
@@ -315,20 +562,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zacharydesario/opt/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     "ename": "TypeError",
+     "evalue": "'Index' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/titanic.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(df\u001b[38;5;241m.\u001b[39mcolumns([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSex\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Index' object is not callable"
      ]
     }
    ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/titanic.csv')\n"
    ]
   },
   {
@@ -340,10 +592,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "ages = []\n",
+    "for age in df['age']:\n",
+    "  if age//1 == age:\n",
+    "    ages.append(age)\n",
+    "\n",
+    "average_age = np.round( sum(ages)/len(ages) )\n",
+    "average_age\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,10 +627,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The youngest age was 1.0\n",
+      "The oldest age was 80.0\n",
+      "The youngest was 1.0\n",
+      "The oldest was 80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_ages = sorted(ages)\n",
+    "print('The youngest age was', sorted_ages[0])\n",
+    "print('The oldest age was', sorted_ages[-1])\n",
+    "\n",
+    "#OR\n",
+    "print('The youngest was', min(ages))\n",
+    "print('The oldest was', max(ages))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -368,10 +660,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "644"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for station in df['embarked']:\n",
+    "  if station == 'S':\n",
+    "    count+=1\n",
+    "\n",
+    "count"
+   ]
   }
  ],
  "metadata": {
@@ -390,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
